Added basic SSI & CGI functionality for webserver

--- a/Webpage/HTML_Pages/index.html
+++ b/Webpage/HTML_Pages/index.html
@@ -15,7 +15,7 @@
 
                 /*Button to go to platformio info*/
                 $("#pio_button").click(function(){
-                    window.location.href = '/platformio_info.html';
+                    window.location.href = '/platformio_info.shtml';
                     return false;
                 });
             }); 
