--- a/Webpage/HTML_Pages/options.html
+++ b/Webpage/HTML_Pages/options.html
@@ -10,19 +10,18 @@
                 
                 /*redirects for color buttons, passing arguments with CGI*/
                 $('#green').click(function(){
-                    window.location.href = '/cgi?bgcolor=green';
-                    return false;
+                    window.location.href = '/options.html?bgcolor=green';
                 });
                 $('#red').click(function(){
-                    window.location.href = '/cgi?bgcolor=red';
+                    window.location.href = '/options.html?bgcolor=red';
                     return false;
                 });
                 $('#magenta').click(function(){
-                    window.location.href = '/cgi?bgcolor=magenta';
+                    window.location.href = '/options.html?bgcolor=magenta';
                     return false;
                 });
                 $('#blue').click(function(){
-                    window.location.href = '/cgi?bgcolor=blue';
+                    window.location.href = '/options.html?bgcolor=blue';
                     return false;
                 });
 
