--- a/Webpage/HTML_Pages/index.html
+++ b/Webpage/HTML_Pages/index.html
@@ -5,6 +5,7 @@
         <title>index page</title>
         <link rel="stylesheet" href="navigationbar.css">
         <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="footer.css">
         <script src="jquery-3.6.0.min.js"></script>
     </head>
     <body>
@@ -17,9 +18,40 @@
                 <a href="chat.shtml">Chat</a>
             </div>
             <div class="content">
-                <h1 id="title">INDEX</h1>
-                <p>test</p>
-                <p>nog meer testen</p>
+                <div id="platformiotitle">
+                    <h2>PlatformIO</h2>
+                </div>
+                <div id="platformiotext">
+                    <div id="piologodiv">
+                        <img src="platformio_logo.png" alt="PlatformIO logo" id="piologopng">
+                    </div>
+                    <div id="piotextdiv">
+                        <p>
+                            PlatformIO is a tool designed for systems engineers and software developers, to write applications for embedded products. It works across different operating systems, and for different platforms using a variety of architectures. <br/><br/>
+                            To develop this project, it was used as a plug-in for Visual Studio Code. <br/><br/>
+                            PlatformIO automatically downloads and configures necessary tools to build and upload projects.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="footer">
+                <div class="footer_text_left">
+                    <p class="footertext">
+                        Website made by Stijn Van den bossche 
+                        during internship at Verhaert 
+                        for a bachelor's thesis at Thomas More.
+                    </p>
+                </div>
+                <div class="footer_text_right">
+                    <div>
+                        <p class="footertext">
+                            View the project in Github:
+                        </p>
+                    </div>
+                    <div id="githubdiv">
+                        <a href="https://github.com/stijnvandenbossche/internship_PlatformIO_2022"><img src="github_logo_small.png" alt="github_logo" id="githublogo"></a>
+                    </div> 
+                </div>
             </div>
         </div>
     </body>
