--- a/Webpage/HTML_Pages/windowslinux.html
+++ b/Webpage/HTML_Pages/windowslinux.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>index page</title>
         <link rel="stylesheet" href="navigationbar.css">
+        <link rel="stylesheet" href="footer.css">
         <link rel="stylesheet" href="windowslinux.css">
         <script src="jquery-3.6.0.min.js"></script>
     </head>
@@ -100,6 +101,25 @@
                         </table>
                     </div>
                 </div>    
+            </div>
+            <div class="footer">
+                <div class="footer_text_left">
+                    <p class="footertext">
+                        Website made by Stijn Van den bossche 
+                        during internship at Verhaert 
+                        for a bachelor's thesis at Thomas More.
+                    </p>
+                </div>
+                <div class="footer_text_right">
+                    <div>
+                        <p class="footertext">
+                            View the project in Github:
+                        </p>
+                    </div>
+                    <div id="githubdiv">
+                        <a href="https://github.com/stijnvandenbossche/internship_PlatformIO_2022"><img src="github_logo_small.png" alt="github_logo" id="githublogo"></a>
+                    </div> 
+                </div>
             </div>
         </div>
     </body>
